--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 img {
-  width: auto;
+  margin: 10px 15px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  width: 400px;
   height: auto;
-  display: block;
+}
+
+body {
+  background-color: antiquewhite;
 }
