--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,37 @@
 img {
-  margin: 10px 15px;
-  border-radius: 4px;
+  margin: 10px auto;
+  border-radius: 15px;
+  max-width: 100%;
   display: flex;
   justify-content: center;
-  width: 400px;
-  height: auto;
 }
 
 body {
+  margin-top: 30px;
   background-color: antiquewhite;
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(12, 226, 59);
+  font-size: 30px;
+  margin: 5px 10px;
+  padding: 10px 20px;
+}
+
+a:hover {
+  color: red;
+}
+h2 {
+  color: rgb(227, 37, 37);
+  font-size: 48px;
+}
+
+h3 {
+  margin: 25px 150px;
+  padding: 20px 50px;
+  font-size: 25px;
+  color: rgb(227, 37, 37);
 }
